--- a/codeflow/views/public/index.html
+++ b/codeflow/views/public/index.html
@@ -64,7 +64,9 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder">
+                        <img src="../../assets/img/team-freelancer.jpg" alt="Equipo Trabajando">
+                    </div>
                     <div class="floating-card card-1">
                         <div class="card-content">
                             <div class="card-title">Desarrollador Fullstack</div>
@@ -252,7 +254,7 @@
                             <li><i class="fas fa-check"></i> Perfiles verificados</li>
                             <li><i class="fas fa-check"></i> Contratos protegidos</li>
                         </ul>
-                        <a href="#" class="btn btn-primary btn-block">Prueba gratuita</a>
+                        <a href="../public/registro.html" class="btn btn-primary btn-block">Adquirir Plan</a>
                     </div>
                     
                     <div class="pricing-card">
@@ -270,7 +272,7 @@
                             <li><i class="fas fa-check"></i> Informes analíticos</li>
                             <li><i class="fas fa-check"></i> Onboarding personalizado</li>
                         </ul>
-                        <a href="#" class="btn btn-outline btn-block">Contactar ventas</a>
+                        <a href="../public/registro.html" class="btn btn-outline btn-block">Adquirir Plan</a>
                     </div>
                 </div>
             </div>
