--- a/codeflow/assets/css/styles.css
+++ b/codeflow/assets/css/styles.css
@@ -287,6 +287,12 @@ body {
     animation: rotate 15s linear infinite;
 }
 
+.image-placeholder img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
