--- a/codeflow/views/public/registro.html
+++ b/codeflow/views/public/registro.html
@@ -107,18 +107,10 @@
                     <form id="freelancer-form" class="register-form" method="POST" action="../../backend/usuarios/registro-freelancer.php">
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="freelancer-firstname">Nombre</label>
+                                <label for="freelancer-tname">Nombre</label>
                                 <div class="input-with-icon">
                                     <i class="fas fa-user"></i>
-                                    <input type="text" name="nombre-freelancer" id="freelancer-firstname" placeholder="Ej: Juan" required>
-                                </div>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label for="freelancer-lastname">Apellido</label>
-                                <div class="input-with-icon">
-                                    <i class="fas fa-user"></i>
-                                    <input type="text" name="apellido-freelancer" id="freelancer-lastname" placeholder="Ej: Pérez" required>
+                                    <input type="text" name="nombre-freelancer" id="freelancer-name" placeholder="Ej: Juan Perez" required>
                                 </div>
                             </div>
                         </div>
