--- a/codeflow/views/public/registro.html
+++ b/codeflow/views/public/registro.html
@@ -144,6 +144,16 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="freelancer-bio">Biografía</label>
+                            <div class="input-text">
+                                <textarea name="bio-freelancer" class="freelancer-bio" rows="5"
+                                placeholder="Breve descripción tuya"
+                                required></textarea>
+                            </div>
+                            <div class="char-counter"><span id="descCounter">0</span>/1000</div>
+                        </div>
+
+                        <div class="form-group">
                             <label for="freelancer-phone">Teléfono</label>
                             <div class="input-with-icon">
                                 <i class="fas fa-phone"></i>
